<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="2.5"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/app_name"
                    android:src="@mipmap/logo_g" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:padding="3dp"
                    app:hintTextAppearance="@style/TextLabel">

                    <EditText
                        android:id="@+id/edt_first_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="serif"
                        android:hint="@string/first_name"
                        android:inputType="textCapSentences"
                        android:maxLines="1"
                        android:paddingEnd="3dp"
                        android:paddingStart="8dp"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:padding="3dp"
                    app:hintTextAppearance="@style/TextLabel">

                    <EditText
                        android:id="@+id/edt_last_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="serif"
                        android:hint="@string/last_name"
                        android:inputType="textCapSentences"
                        android:maxLines="1"
                        android:paddingEnd="3dp"
                        android:paddingStart="8dp"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:padding="3dp"
                    app:hintTextAppearance="@style/TextLabel">

                    <EditText
                        android:id="@+id/edt_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="serif"
                        android:hint="@string/prompt_email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:paddingEnd="3dp"
                        android:paddingStart="8dp"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:padding="3dp"
                    app:hintTextAppearance="@style/TextLabel">

                    <EditText
                        android:id="@+id/edt_mobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="serif"
                        android:hint="@string/mobile"
                        android:inputType="phone|number"
                        android:maxLength="10"
                        android:maxLines="1"
                        android:paddingEnd="3dp"
                        android:paddingStart="8dp"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <CheckBox
                    android:id="@+id/chk_terms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="serif"
                    android:text="@string/terms_condition"
                    android:textColor="@color/colorAccent"
                    android:buttonTint="@color/colorAccent" />

                <Button
                    android:id="@+id/btn_register"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginLeft="60dp"
                    android:layout_marginRight="60dp"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/button_shap"
                    android:fontFamily="serif"
                    android:text="@string/register"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>


        </LinearLayout>

    </ScrollView>


</LinearLayout>
