<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin">

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="2.5"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/app_name"
                    android:src="@mipmap/logo_g" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:padding="5dp"
                    android:text="@string/verify_number"
                    android:textAlignment="center"
                    android:textSize="25sp"
                    android:textStyle="normal" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="serif"
                    android:padding="5dp"
                    android:text="@string/sent_number_msg"
                    android:textAlignment="center"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/txt_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="serif"
                    android:padding="5dp"
                    android:text=""
                    android:textAlignment="center"
                    android:textColor="@color/colorAccent"
                    android:textSize="20sp"
                    android:textStyle="normal" />

                <com.goodiebag.pinview.Pinview
                    android:id="@+id/pinview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="serif"
                    app:cursorVisible="true"
                    app:hint="0"
                    app:inputType="number"
                    app:password="false"
                    app:pinLength="4" />

                <!--app:pinWidth="40dp"-->
                <!--app:pinHeight="40dp"-->
                <!--app:cursorVisible="false"-->
                <!--app:forceKeyboard="true"-->

                <Button
                    android:id="@+id/btn_verify"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginLeft="60dp"
                    android:layout_marginRight="60dp"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/button_shap"
                    android:fontFamily="serif"
                    android:text="@string/verify"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="serif"
                        android:gravity="center"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp"
                        android:text="@string/resend_otp_msg"
                        android:textAlignment="center"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/txt_resend_otp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginStart="5dp"
                        android:fontFamily="serif"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp"
                        android:text="@string/resend_otp"
                        android:textAlignment="center"
                        android:textColor="@color/hint_color_gray_daerk"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
